--- a/questions-editor.html
+++ b/questions-editor.html
@@ -29,41 +29,84 @@
     </div>
 
 
-        <!-- Add Question Modal -->
-        <div class="modal" tabindex="-1" id="addQuestionModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Add Question</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+       <!-- Add Question Modal -->
+<div class="modal" tabindex="-1" id="addQuestionModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add Question</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!-- [Insert Add Question Form HTML code here] -->
+                <form id="addQuestionForm">
+                    <div class="mb-3">
+                        <label for="question" class="form-label">Question</label>
+                        <input type="text" class="form-control" id="question" required>
                     </div>
-                    <div class="modal-body">
-                        <!-- [Insert Add Question Form HTML code here] -->
-                        <form id="addQuestionForm">
-                            <div class="mb-3">
-                                <label for="question" class="form-label">Question</label>
-                                <input type="text" class="form-control" id="question" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="skill" class="form-label">Skill</label>
-                                <select class="form-select" id="skill" required>
-                                    <option value="easy">Easy</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="hard">Hard</option>
-                                </select>
-                            </div>
-                            <!-- [Add similar input fields for choices, correct choice, and explanations] -->
-                        </form>
+                    <div class="mb-3">
+                        <label for="skill" class="form-label">Skill</label>
+                        <select class="form-select" id="skill" required>
+                            <option value="easy">Easy</option>
+                            <option value="medium">Medium</option>
+                            <option value="hard">Hard</option>
+                        </select>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onclick="addQuestion()">Save</button>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <!-- [Add similar input fields for choices, correct choice, and explanations] -->
+                    <div class="mb-3">
+                        <label for="choice1" class="form-label">Choice 1</label>
+                        <input type="text" class="form-control" id="choice1" required>
                     </div>
-                </div>
+                    <div class="mb-3">
+                        <label for="choice2" class="form-label">Choice 2</label>
+                        <input type="text" class="form-control" id="choice2" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="choice3" class="form-label">Choice 3</label>
+                        <input type="text" class="form-control" id="choice3" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="choice4" class="form-label">Choice 4</label>
+                        <input type="text" class="form-control" id="choice4" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="correctChoice" class="form-label">Correct Choice</label>
+                        <select class="form-select" id="correctChoice" required>
+                            <option value="1">Choice 1</option>
+                            <option value="2">Choice 2</option>
+                            <option value="3">Choice 3</option>
+                            <option value="4">Choice 4</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="explanation1" class="form-label">Explanation 1</label>
+                        <textarea class="form-control" id="explanation1" rows="3" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="explanation2" class="form-label">Explanation 2</label>
+                        <textarea class="form-control" id="explanation2" rows="3" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="explanation3" class="form-label">Explanation 3</label>
+                        <textarea class="form-control" id="explanation3" rows="3" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="explanation4" class="form-label">Explanation 4</label>
+                        <textarea class="form-control" id="explanation4" rows="3" required></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="addQuestion()">Save</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
+    </div>
+</div>
+
     
        <!-- Edit Question Modal -->
+<!-- Edit Question Modal -->
 <div class="modal" tabindex="-1" id="editQuestionModal">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -86,6 +129,7 @@
                             <option value="hard">Hard</option>
                         </select>
                     </div>
+                    <!-- [Add similar input fields for choices, correct choice, and explanations] -->
                     <div class="mb-3">
                         <label for="editChoice1" class="form-label">Choice 1</label>
                         <input type="text" class="form-control" id="editChoice1" required>
@@ -112,8 +156,23 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="editExplanation" class="form-label">Explanation</label>
-                        <textarea class="form-control" id="editExplanation" rows="3" required></textarea>
+                        <label for="editExplanation1" class="form-label">Explanation 1</label>
+                        <textarea class="form-control" id="editExplanation1" rows="3" required></textarea>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editExplanation2" class="form-label">Explanation 2</label>
+                        <textarea class="form-control" id="editExplanation2" rows="3" required></textarea>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editExplanation3" class="form-label">Explanation 3</label>
+                        <textarea class="form-control" id="editExplanation3" rows="3" required></textarea>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="editExplanation4" class="form-label">Explanation 4</label>
+                        <textarea class="form-control" id="editExplanation4" rows="3" required></textarea>
                     </div>
                 </form>
             </div>
