--- a/questioncrud.html
+++ b/questioncrud.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Question Manager</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="CSS/questioncrud.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     
@@ -19,7 +19,7 @@
               <h1>Quiz Question Manager</h1>
               <p class="mb-0">Question Count: <span id="questionCount">Easy: 0, Medium: 0, Hard: 0</span></p>
               <button id="importQuestionsBtn" class="btn btn-secondary">Import Questions</button>
-<input type="file" id="importQuestionsFile" style="display: none;" accept=".json">
+<input type="file" id="importQuestionsFile" style="display: none;" accept=".*">
 
           </div>
 
@@ -44,7 +44,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="JS/questioncrud.js"></script>
     <div class="modal fade" id="questionModal" tabindex="-1" aria-labelledby="questionModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
