--- a/quick-answers.html
+++ b/quick-answers.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <title>Quick Answers</title>
     <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5v7y63FqLMlZA5wb7lTgF0g7L3BOw6I3V7Fq19uo" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     
 </head>
