--- a/qacatcrud.html
+++ b/qacatcrud.html
@@ -69,7 +69,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="JS/qacategoriescrud.js"></script>
+    <script src="JS/qacatcrud.js"></script>
 </body>
 
 </html>
