--- a/qacatcrud.html
+++ b/qacatcrud.html
@@ -78,6 +78,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
-    <script src="qacatcrud.js"></script>
+    <script src="JS/qacatcrud.js"></script>
 </body>
 </html>
