--- a/qacatcrud.html
+++ b/qacatcrud.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="saveCategoryBtn">Save changes</button>
+                    <button type="button" class="btn btn-primary" id="saveCategoryBtn" onclick="submitForm()">Save changes</button>
                 </div>
             </div>
         </div>
