--- a/qaquescrud.html
+++ b/qaquescrud.html
@@ -96,7 +96,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button id="saveQuestionBtn" type="button" class="btn btn-primary" onclick="saveQuestion()">Save changes</button>
+                    <button id="saveQuestionBtn" type="button" class="btn btn-primary">Save changes</button>
+
                 </div>
             </div>
         </div>
