--- a/crudmenu.html
+++ b/crudmenu.html
@@ -24,6 +24,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="questioncrud.html">Quiz Questions</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="stquescrud.html">Conversation Starter Questions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="stcatcrud.html">Conversation Starter Categories</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -36,6 +42,8 @@
                     <li><a href="qacatcrud.html">Quick Answer Categories</a></li>
                     <li><a href="qaquescrud.html">Quick Answer Answers</a></li>
                     <li><a href="questioncrud.html">Quiz Questions</a></li>
+                    <li><a href="stquescrud.html">Conversation Starter Questions</a></li>
+                    <li><a href="stcatcrud.html">Conversation Starter Categories</a></li>
                 </ul>
             </div>
         </div>
