--- a/crudmenu.html
+++ b/crudmenu.html
@@ -15,20 +15,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    
                     <li class="nav-item">
-                        <a class="nav-link active" href="qacatcrud.html">Quick Answer Categories</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="qaquescrud.html">Quick Answer Answers</a>
+                        <a class="nav-link" href="qaquescrud.html">Quick Answers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="questioncrud.html">Quiz Questions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="stquescrud.html">Conversation Starter Questions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="stcatcrud.html">Conversation Starter Categories</a>
+                        <a class="nav-link" href="stquescrud.html">Conversation Starters</a>
+
                     </li>
                 </ul>
             </div>
@@ -39,11 +35,9 @@
             <div class="col">
                 <h1 class="h3">CRUD Menu</h1>
                 <ul>
-                    <li><a href="qacatcrud.html">Quick Answer Categories</a></li>
-                    <li><a href="qaquescrud.html">Quick Answer Answers</a></li>
+                    <li><a href="qaquescrud.html">Quick Answers</a></li>
                     <li><a href="questioncrud.html">Quiz Questions</a></li>
-                    <li><a href="stquescrud.html">Conversation Starter Questions</a></li>
-                    <li><a href="stcatcrud.html">Conversation Starter Categories</a></li>
+                    <li><a href="stquescrud.html">Conversation Starters</a></li>
                 </ul>
             </div>
         </div>
