--- a/qaquescrud.html
+++ b/qaquescrud.html
@@ -33,7 +33,7 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Category ID</th>
+                            <th>Category</th>
                             <th>Question</th>
                             <th>Answer</th>
                             <th>Link</th>
