--- a/starters.html
+++ b/starters.html
@@ -1,56 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Starters</title>
-  <!-- Include Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Include custom CSS -->
-  <!-- Include Bootstrap JavaScript and Popper.js -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
-  <link href="CSS/styles.css" rel="stylesheet">
-  <!DOCTYPE html>
-<html>
-<head>
-  <title>Conversation Starters</title>
- 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <title>Quick Answers</title>
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    
 </head>
-
-</html>
-
-
 <body>
-  <!-- New header -->
-  <div id="header">
-    <div class="header-content">
-      <!-- Wrap the house icon in an anchor tag -->
-      <a href="index.html">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-house" viewBox="0 0 16 16">
-          <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
-        </svg>
-      </a>  <h1><span>&#x1F4AC;</span> Conversation Starters</h1>
-    </div>
-  </div>
-  
-  <!-- Title banner -->
-  <div class="container my-5">
-    <div class="card p-3">
-      <div class="text-center py-4">
-        <h1>Quick conversation starters to present the Christian gospel to different types of people</h1>
-      </div>
-      <!-- Starters container -->
-
-        <div id="categories-container">
-          <div class="accordion" id="accordionExample">
-            <!-- Dynamic content will be added here -->
-          </div>
+    
+    <div id="header">
+        <div class="header-content">
+            <a href="index.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-house" viewBox="0 0 16 16">
+                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+                </svg>
+            </a>
+            <h1>Conversation Starters</h1>
         </div>
-        <!-- Include custom JS -->
-        <script src="JS/starters.js"></script>
-      </div>
-
+    </div>
+<!-- Add the hero area -->
+<div class="hero">
+    <h2>Tips on starting a conversation with various types of people<h2>
   </div>
+    <div class="container my-5">
+        <style>
+            .container {
+                width: 95%;
+                max-width: none;
+                margin-top: 0px;
+            }
+        </style>
+        <div class="card p-3">
+          <header class="text-center py-4">
+          </header>
+
+          <div id="categories-container" class="accordion"></div>
+        </div>
+    </div>
+
+    <!-- Include quick-answers.js -->
+    <script src="JS/starters.js"></script>
+
+    <!-- Include Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
