--- a/crudmenu.html
+++ b/crudmenu.html
@@ -17,15 +17,12 @@
                 <ul class="navbar-nav">
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="qaquescrud.html">Quick Answers</a>
+                        <a class="nav-link" href="qaquescrud.html">Quick Answers & Conversation Starters</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="questioncrud.html">Quiz Questions</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="stquescrud.html">Conversation Starters</a>
-
-                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -35,9 +32,9 @@
             <div class="col">
                 <h1 class="h3">CRUD Menu</h1>
                 <ul>
-                    <li><a href="qaquescrud.html">Quick Answers</a></li>
+                    <li><a href="qaquescrud.html">Quick Answers & Conversation Starters</a></li>
                     <li><a href="questioncrud.html">Quiz Questions</a></li>
-                    <li><a href="stquescrud.html">Conversation Starters</a></li>
+
                 </ul>
             </div>
         </div>
